// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders without crashing even with no text or emoji data 1`] = `
<div
  className="card"
>
  <section
    className="card__content"
  >
    <div
      className="cat"
    >
      <img
        src="https://pbs.twimg.com/profile_images/612360484155695104/4ZTgU059_400x400.jpg"
      />
    </div>
    <p
      className="card__content-text"
    />
    <p
      className="card__content-emoji"
    />
    <button
      aria-label="Delete"
      className="card__delete"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </section>
</div>
`;

exports[`Card that it matches an existing snapshot 1`] = `
<div
  className="card"
>
  <section
    className="card__content"
  >
    <div
      className="cat"
    >
      <img
        src="https://dingo.care2.com/pictures/causes/3147/3146752.large.jpg"
      />
    </div>
    <p
      className="card__content-text"
    >
      this is test text string
    </p>
    <p
      className="card__content-emoji"
    >
      test emoji
    </p>
    <button
      aria-label="Delete"
      className="card__delete"
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </section>
</div>
`;
